apps/hermes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hermes
spec:
  ports:
    - port: 80
      targetPort: hermes
  selector:
    app.kubernetes.io/name: hermes
